--- a/hotel/suite.html
+++ b/hotel/suite.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
-<body id="hotel">
+<body id="hotel-room">
     <!-- ==================== NAVIGATION ==================== -->
     <header id="head">
         <nav class="main-nav">
@@ -52,63 +52,65 @@
 
     <!-- ==================== MAIN CONTENT ==================== -->
     <main>
-        <section class="room-detail">
-            <div class="room-img">
-                <img src="../img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
-            </div>
+        <section class="hotel-room"
+            <div class="room-detail">
+                <div class="room-img">
+                    <img src="../img/card-suite.jpeg" alt="Ett hotellrum utifrån sett med nordiska träd i förgrunden. I bakgrunden, innanför glasväggar syns ett badkar och en säng.">
+                </div>
 
-            <div class="room-info">
-            <h2>Suite</h2>
-            <p>Vår mest exklusiva upplevelse – generösa ytor, jacuzzi på rummet och privat bastu med panoramavy över vattnet. En upplevelse utöver det vanliga, för dig som söker fullständig avkoppling och avskildhet.</p>
-            
-            <div class="room-info-list">
+                <div class="room-info">
+                    <h2>Suite</h2>
+                    <p>Vår mest exklusiva upplevelse – generösa ytor, jacuzzi på rummet och privat bastu med panoramavy över vattnet. En upplevelse utöver det vanliga, för dig som söker fullständig avkoppling och avskildhet.</p>
+
+                    <div class="room-info-list">
                         <h3>Rumsinfo</h3>
-            <ul>
-                    <li><strong>Rumsstorlek:</strong> 70 m&sup2;</li>
-                    <li><strong>Incheckning:</strong> 15:00</li>
-                    <li><strong>Utcheckning:</strong> 11:00</li>
-                    <li><strong>Sängstorlek:</strong> 200 cm</li>
-                    <li><strong>Max antal personer:</strong> 4</li>
-                    <li><strong>Extra säng/mindre sängar:</strong> 2</li>
-                </ul>
-            </div>
+                        <ul>
+                            <li><strong>Rumsstorlek:</strong> 70 m&sup2;</li>
+                            <li><strong>Incheckning:</strong> 15:00</li>
+                            <li><strong>Utcheckning:</strong> 11:00</li>
+                            <li><strong>Sängstorlek:</strong> 200 cm</li>
+                            <li><strong>Max antal personer:</strong> 4</li>
+                            <li><strong>Extra säng/mindre sängar:</strong> 2</li>
+                        </ul>
+                    </div>
 
-                <div class="facilities">
-                                <h3>Faciliteter</h3>
-                <ul class="fac">
-                    <li><i class="fa-solid fa-spa"></i> Badrock & tofflor</li>
-                    <li><i class="fa-solid fa-wifi"></i> Gratis WiFi</li>
-                    <li><i class="fa-solid fa-wind"></i> Hårfön</li>
-                    <li><i class="fa-solid fa-martini-glass"></i> Minibar</li>
-                    <li><i class="fa-solid fa-mug-hot"></i> Nespressomaskin</li>
-                    <li><i class="fa-solid fa-tv"></i> 2 st smart-TV</li>
+                    <div class="facilities">
+                        <h3>Faciliteter</h3>
+                        <ul class="fac">
+                            <li><i class="fa-solid fa-spa"></i> Badrock & tofflor</li>
+                            <li><i class="fa-solid fa-wifi"></i> Gratis WiFi</li>
+                            <li><i class="fa-solid fa-wind"></i> Hårfön</li>
+                            <li><i class="fa-solid fa-martini-glass"></i> Minibar</li>
+                            <li><i class="fa-solid fa-mug-hot"></i> Nespressomaskin</li>
+                            <li><i class="fa-solid fa-tv"></i> 2 st smart-TV</li>
 
-                    <li><i class="fa-solid fa-hot-tub-person"></i> Jacuzzi på rummet</li>
-                    <li><i class="fa-solid fa-fire-flame-curved"></i> Privat bastu</li>
-                    <li><i class="fa-solid fa-water"></i> Sjöutsikt</li>
-                    <li><i class="fa-solid fa-chair"></i> Egen uteplats</li>
-                    <li><i class="fa-solid fa-bath"></i> Badkar</li>
-                    <li><i class="fa-solid fa-shower"></i> Dusch</li>
-                    <li><i class="fa-solid fa-lock"></i> Förvaringsbox</li>
-                    <li><i class="fa-solid fa-couch"></i> Soffa</li>
-                </ul>
-            </div>
-            </div>
-        </section>
+                            <li><i class="fa-solid fa-hot-tub-person"></i> Jacuzzi på rummet</li>
+                            <li><i class="fa-solid fa-fire-flame-curved"></i> Privat bastu</li>
+                            <li><i class="fa-solid fa-water"></i> Sjöutsikt</li>
+                            <li><i class="fa-solid fa-chair"></i> Egen uteplats</li>
+                            <li><i class="fa-solid fa-bath"></i> Badkar</li>
+                            <li><i class="fa-solid fa-shower"></i> Dusch</li>
+                            <li><i class="fa-solid fa-lock"></i> Förvaringsbox</li>
+                            <li><i class="fa-solid fa-couch"></i> Soffa</li>
+                        </ul>
+                    </div>
+                </div>
 
-        <section class="room-detail">
-            <div class="room-info">
-                <h2>Bra att veta</h2>
-                <ul class="hotel-fac">
-                    <li>Fri parkering</li>
-                    <li>12 st laddstolpar</li>
-                    <li>Parkering i garage – 150 SEK / dygn</li>
-                    <li>Tvättservice finns (avgift tillkommer)</li>
-                    <li>Frukostbuffé: 06:00–10:00</li>
-                    <li>Roomservice: 07:00–22:00</li>
-                    <li>Husdjursfri policy / allergivänliga rum</li>
-                    <li>Tillgänglighet: Hiss och handikapprum finns</li>
-                </ul>
+                <div class="room-detail">
+                    <div class="room-info">
+                        <h2>Bra att veta</h2>
+                        <ul class="hotel-fac">
+                            <li>Fri parkering</li>
+                            <li>12 st laddstolpar</li>
+                            <li>Parkering i garage – 150 SEK / dygn</li>
+                            <li>Tvättservice finns (avgift tillkommer)</li>
+                            <li>Frukostbuffé: 06:00–10:00</li>
+                            <li>Roomservice: 07:00–22:00</li>
+                            <li>Husdjursfri policy / allergivänliga rum</li>
+                            <li>Tillgänglighet: Hiss och handikapprum finns</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
