--- a/offers.html
+++ b/offers.html
@@ -159,6 +159,15 @@
             </div>
         </section>
 
+<section class="intro">
+            <div class="offers-intro">
+<h2>Stig in i lugnet</h2>
+<p>Låt vardagens brus stanna utanför. Våra spa- och relaxpaket är skapade för att omsluta dig i ro, värme och harmoni – från stilla bad och doftande bastur till måltider som vårdar både kropp och sinne.</p>
+<br>
+<p>Känn vattnets mjuka omfamning, dofterna som fyller rummet och tystnaden som ger plats för dina egna andetag. Oavsett om du väljer en dag, en helg eller ett skräddarsytt paket – här hittar du stunder som ger ny energi, återhämtning och njutning.</p>
+        </div>
+        </section>
+
         <section class="highlights day" id="day">
             <h2>Dagsspa</h2>
             <div class="cards packages">
