--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -297,7 +297,8 @@
                 <h2>Källförteckning</h2>
                 <ul>
                     <li><em>Garrett, JJ. (2011)</em>. The elements of User Experience: User-Centered Design for the Web and Beyond. 2nd ed. Berkeley, CA: New Riders.</li>
-                    <li>Bildkällor: <a href="https://unsplash.com/">Unsplash</a> och <a href="https://pixabay.com/sv/">Pixabay</a></li>
+                    <li><strong>Bildkällor:</strong> <a href="https://unsplash.com/">Unsplash</a> och <a href="https://pixabay.com/sv/">Pixabay</a></li>
+                    <li><strong>Inspiration:</strong> <a href="https://www.vann.se/">VANN Spa</a> & <a href="https://www.arkenhotel.com/">Arken Hotel & Art Garden Spa</a></li>
                 </ul>
             </section>
         </main>
