--- a/spa/spa.html
+++ b/spa/spa.html
@@ -75,22 +75,22 @@
             </div>
         </section>
 
-        <section class="intro">
+        <section class="intro-spa">
             <div class="spa-intro">
             <div class="spa-wrapper">
                 <h2>Avkoppling för kropp och sinne</h2>
-                <h3>9 pooler • 6 bastur • Relaxavdelning</h3>
-                <p>Välkommen till vår spaavdelning - en plats skapad för total återhämtning. Låt stillheten omfamna dig, känn de varma tonerna och doften av eteriska oljor som fyller rummen. Här möts nordisk enkelhet och modern spalyx i en harmonisk upplevelse för både kropp och själ.</p>
+                <p>Välkommen till vår spaavdelning - en plats skapad för total återhämtning. Låt stillheten omfamna dig, känn de varma tonerna och doften av eteriska oljor som fyller rummen. Här möts nordisk enkelhet och modern spalyx.</p>
                 <br>
-                <p>Vandra mellan bastur med mjuk värme, svala källor som väcker sinnena och lugna relaxytor där du kan vila i tystnad. Utomhus väntar frisk luft, porlande vatten och vyer som stillar tankarna. Oavsett om du söker ro, energi eller bara en stunds närvaro, hittar du här en plats där du får återknyta till dig själv.</p>
+                <h3>9 pooler • 6 bastur • Relaxavdelning</h3>
+                <p>Vandra mellan bastur, svala källor, lugna relaxytor och vyer som stillar tankarna. Oavsett om du söker ro, energi eller bara en stunds närvaro, hittar du här en plats där du får återknyta till dig själv.</p>
             </div>
 
             <div class="ritual-wrapper">
                 <h2>Den lugnande inledningen</h2>
-                <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro, återhämtning och ditt välbefinnande. Här får du en stund att landa, andas djupt och låta tankarna tystna. Denna stund är en mjuk övergång in i spavistelsen.</p>
+                <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro, återhämtning och ditt välbefinnande. Här får du en stund att landa, andas djupt och låta tankarna tystna innan du går vidare in i spaet.</p>
                 <br>
-                <h3>Ritual</h3>
-                <p>Sätt dig bekvämt, känn tyngden i kroppen och låt andetagen bli långsamma och djupa. Tystnaden och de subtila dofterna omsluter dig medan sinnena stillas. När du lämnar rummet har du skapat utrymme för ro, närvaro och total avkoppling.</p>
+                <h3>Tvagningsritual</h3>
+                <p>Skölj kroppen, tvätta och skölj igen, låt vattnets värme och rörelser mjuka upp musklerna och skapa en ren, uppfriskad känsla. Här ingår även kroppskrubb och fotbad med salt för den som önskar. Ritualen öppnar sinnena och ger en närvarande start på din tid i spaet.</p>
             </div>
         </div>
         </section>
