spa page complete

--- a/offers.html
+++ b/offers.html
@@ -280,9 +280,8 @@
                     </div>
                 </article>
 
-
             </div>
-            <p class="sidenote">* Lån av badrock, tofflor och handduk ingår i alla paket.</p>
+            <p class="sidenote">* Lån av handduk, badrock och tofflor ingår alltid.</p>
         </section>
 
         <section class="highlights stay" id="stay">
@@ -368,7 +367,7 @@
                 </article>
 
             </div>
-            <p class="sidenote">* Lån av badrock, tofflor och handduk ingår i alla paket.</p>
+            <p class="sidenote">* Lån av handduk, badrock och tofflor ingår alltid.</p>
         </section>
         <div class="transition">
             <p>
