--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -88,6 +88,7 @@
         li {
             margin-bottom: 1rem;
         }
+
         ul.req,
         ul.check {
             padding: 0;
@@ -107,6 +108,7 @@
             position: absolute;
             left: 0;
         }
+
         ul.req li::before {
             content: '☐ ';
         }
@@ -231,36 +233,48 @@
                 <p>Webbplatsen ska:</p>
                 <ul class="check">
                     <li>innehålla en startsida med introduktion till Nordic Calm Spa och dess atmosfär.
-                        <br>⤷ <strong>uppfyllt</strong>. Text och bild samspelar väl och förmedlar rätt känsla.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Text och bild samspelar väl och förmedlar rätt känsla.
+                    </li>
                     <li>presentera information om behandlingar, paket och priser.
-                        <br>⤷ <strong>uppfyllt</strong>. Webbplatsen innehåller tydliga beskrivningar och prisinformation är lätt att hitta.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Webbplatsen innehåller tydliga beskrivningar och prisinformation är lätt att hitta.
+                    </li>
                     <li>innehålla en sida/sektion riktad till företag om friskvård och personalaktiviteter.
-                        <br>⤷ <strong>uppfyllt</strong>. En sida riktad till företag har lagts till med innehåll anpassat för denna målgrupp.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. En sida riktad till företag har lagts till med innehåll anpassat för denna målgrupp.
+                    </li>
                     <li>innehålla kontaktinformation samt ett kontaktformulär.
-                        <br>⤷ <strong>uppfyllt</strong>. Kontaktinformation finns i footer på samtliga sidor, och kontaktformuläret nås både via cta-knappar och länk i sidfoten.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Kontaktinformation finns i footer på samtliga sidor, och kontaktformuläret nås både via cta-knappar och länk i sidfoten.
+                    </li>
                     <li>innehålla minst en bild per sida som förstärker innehållets budskap.
-                        <br>⤷ <strong>uppfyllt</strong>. Samtliga sidor innehåller minst en bild som stödjer textens syfte.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Samtliga sidor innehåller minst en bild som stödjer textens syfte.
+                    </li>
                     <li>vara skriven på svenska och spegla en lugn, professionell och harmonisk ton.
-                        <br>⤷ <strong>uppfyllt</strong>. All text är på svenska och har utformats för att spegla varumärkets värden och känsla.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. All text är på svenska och har utformats för att spegla varumärkets värden och känsla.
+                    </li>
                 </ul>
                 <h3>Funktion</h3>
                 <p>Användaren ska:</p>
                 <ul class="check">
                     <li>kunna navigera mellan webbplatsens sidor via en meny i sidhuvudet.
-                        <br>⤷ <strong>uppfyllt</strong>. Navigationsmenyn är konsekvent placerad högst upp och förblir synlig även vid scrollning. De viktigaste länkarna återfinns även i footern.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Navigationsmenyn är konsekvent placerad högst upp och förblir synlig även vid scrollning. De viktigaste länkarna återfinns även i footern.
+                    </li>
                     <li>kunna klicka på knappar och länkar för att läsa mer, boka eller ta kontakt.
-                        <br>⤷ <strong>delvis uppfyllt</strong>. Webbplatsen innehåller flera knappar och länkar till olika sidor, exempelvis behandlingar och paket samt kontaktformulär för frågor och bokning. Däremot saknas särskilda 'läs mer'-länkar.</li>
+                        <br>⤷ <strong>delvis uppfyllt</strong>. Webbplatsen innehåller flera knappar och länkar till olika sidor, exempelvis behandlingar och paket samt kontaktformulär för frågor och bokning. Däremot saknas särskilda 'läs mer'-länkar.
+                    </li>
                     <li>kunna skicka meddelande via ett kontaktformulär.
-                        <br>⤷ <strong>uppfyllt</strong>. På sidan "Boka nu" finns ett formulär där användaren kan fylla i sina uppgifter, önskat datum, vad den vill boka och även skriva ett meddelande. Det finns även formulär för att boka hotellrum, bord på restaurangen eller en behandling.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. På sidan "Boka nu" finns ett formulär där användaren kan fylla i sina uppgifter, önskat datum, vad den vill boka och även skriva ett meddelande. Det finns även formulär för att boka hotellrum, bord på restaurangen eller en behandling.
+                    </li>
                     <li>kunna nå kontaktsektionen direkt via en knapp i hero-området.
-                        <br>⤷ <strong>delvis uppfyllt</strong>. En länk till "Kontakt & FAQ" finns i footern på alla sidor.</li>
+                        <br>⤷ <strong>delvis uppfyllt</strong>. En länk till "Kontakt & FAQ" finns i footern på alla sidor.
+                    </li>
                 </ul>
                 <p>Webbplatsen ska:</p>
                 <ul class="check">
                     <li>vara responsiv och fungera på dator, surfplatta och mobil.
-                        <br>⤷ <strong>uppfyllt</strong>. Layouten anpassar sig väl till olika skärmstorlekar.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Layouten anpassar sig väl till olika skärmstorlekar.
+                    </li>
                     <li>ha hovring på knappar och länkar som visuellt indikerar interaktivitet.
-                        <br>⤷ <strong>uppfyllt</strong>. Hovring ger visuella förändringar som stärker användarupplevelsen och tydliggör klickbara element.</li>
+                        <br>⤷ <strong>uppfyllt</strong>. Hovring ger visuella förändringar som stärker användarupplevelsen och tydliggör klickbara element.
+                    </li>
                 </ul>
                 <p>Sammanfattningsvis uppfyller webbplatsen samtliga krav som definierats i kravspecifikationen.</p>
             </section>
@@ -269,29 +283,55 @@
                 <h3>- med metoden "Tänka högt" (Thinking Out Loud)</h3>
                 <!-- Endast för VG. Har du inte utfört användartest, tar du bort detta avsnitt (hela section-elementet). -->
                 <!-- Beskriv hur du genomförde användartestet. Ange vilka brister du upptäckte och hur du åtgärdat dem. -->
-                 <h3>Erica</h3>
-                 <p><strong>Jag genomförde användartestet på min syster som fick navigera runt på webbplatsen och ge återkoppling utifrån sin upplevelse som besökare. Hon påpekade flera förbättringsmöjligheter, bland annat:</strong></p>
-                    <ul class="req">
-<li>Att vissa artiklar hade hover-effekt trots att de redan innehöll all information, vilket skapade förvirring.</li>
-<li>Att inputfälten i formulären upplevdes som något låga och trånga.</li>
-<li>Att informationen i “sidenote” under spapaketen var otydlig och behövde framträda tydligare.</li>
-<li>Att rubriken “Spa med övernattning” kunde bytas till “Dagsspa” för att få mer flyt och minska upprepning.</li>
-<li>Att FAQ-delen skulle kunna kategoriseras för att användaren ska få bättre överblick.</li>
-<li>Att information om laddstolpar för elbil saknades.</li>
-<li>Att det borde finnas tillval i bokningsformuläret, t.ex. fruktbricka eller vin.</li>
-<li>Att hon saknade mer information om hotellrummen än det som syns på sidan “Hotel”.</li>
-</ul>
-<br>
-<p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
-<ul class="check">
-<li>Gjorde alla klickbara artiklar klickbara över hela ytan, inte bara via länken.</li>
-<li>Tog bort hover-effekten från de artiklar som redan visar all information (för att undvika missvisande interaktivitet).</li>
-<li>Förstorande inputfälten i formulären för att göra dem mer lättanvända.</li>
-<li>Gjorde “sidenote”-informationen mer framträdande visuellt.</li>
-<li>Bytte namn på “Spa utan övernattning” till “Dagsspa”.</li>
-<li>Lade till information om laddstolpar för elbil på både “Kontakt & FAQ” och i hotellinformationen.</li>
-<li>Skapade separata sidor för de olika rummen med mer information om rummen och faciliteterna.</li></ul>
-<p>Jag planerar dessutom att, om tid finns, kategorisera frågorna i FAQ-sektionen för att ytterligare förbättra användarvänligheten.</p>
+                <h3>Testperson 1: Erica</h3>
+                <p><strong>Jag genomförde användartestet på min syster som fick navigera runt på webbplatsen och ge återkoppling utifrån sin upplevelse som besökare. Hon påpekade flera förbättringsmöjligheter, bland annat:</strong></p>
+                <ul class="req">
+                    <li>Att vissa artiklar hade hover-effekt trots att de redan innehöll all information, vilket skapade förvirring.</li>
+                    <li>Att inputfälten i formulären upplevdes som något låga och trånga.</li>
+                    <li>Att informationen i “sidenote” under spapaketen var otydlig och behövde framträda tydligare.</li>
+                    <li>Att rubriken “Spa med övernattning” kunde bytas till “Dagsspa” för att få mer flyt och minska upprepning.</li>
+                    <li>Att FAQ-delen skulle kunna kategoriseras för att användaren ska få bättre överblick.</li>
+                    <li>Att information om laddstolpar för elbil saknades.</li>
+                    <li>Att det borde finnas tillval i bokningsformuläret, t.ex. fruktbricka eller vin.</li>
+                    <li>Att hon saknade mer information om hotellrummen än det som syns på sidan “Hotel”.</li>
+                </ul>
+                <br>
+                <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
+                <ul class="check">
+                    <li>Gjorde alla klickbara artiklar klickbara över hela ytan, inte bara via länken.</li>
+                    <li>Tog bort hover-effekten från de artiklar som redan visar all information (för att undvika missvisande interaktivitet).</li>
+                    <li>Förstorande inputfälten i formulären för att göra dem mer lättanvända.</li>
+                    <li>Gjorde “sidenote”-informationen mer framträdande visuellt.</li>
+                    <li>Bytte namn på “Spa utan övernattning” till “Dagsspa”.</li>
+                    <li>Lade till information om laddstolpar för elbil på både “Kontakt & FAQ” och i hotellinformationen.</li>
+                    <li>Skapade separata sidor för de olika rummen med mer information om rummen och faciliteterna.</li>
+                </ul>
+                <p>Jag planerar dessutom att, om tid finns, kategorisera frågorna i FAQ-sektionen för att ytterligare förbättra användarvänligheten.</p>
+
+                <h3>Testperson 2: Daniel</h3>
+                <p><strong>Jag genomförde även användartestet på min sambo Daniel. Han hade följande synpunkter:</strong></p>
+                <ul>
+                    <li>Tydlig och logisk navigering.</li>
+                    <li>Intressant innehåll och inspirerande bilder.</li>
+                    <li>Ingenting som inte verkar fungera – kul att formulären går att skicka!</li>
+                    <li>Hade anlitat mig direkt.</li>
+                </ul>
+                <p><strong>Förslag på förbättringar:</strong></p>
+                <ul class="req">
+                    <li>Saknade öppettider för restaurang.</li>
+                    <li>Mer information om ritualen hade varit bra.</li>
+                    <li>Hade velat se mer bilder på t.ex. poolerna.</li>
+                    <li>Inte tillräckligt tydlig information om handduk, badrock och tofflor.</li>
+                    <li>Önskade mer lättillgänglig information om parkeringsmöjligheter.</li>
+                </ul>
+                <br>
+                <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
+                <ul class="check">
+                    <li>Lade till restaurangens öppettider i footern, samt i restaurangens intro.</li>
+                    <li>Formulerade om texten om tvagningsritualen för att bli mer informativ.</li>
+                    <li>Lade till informationen i "sidenote" även på "Spa & Relax"-sidan.</li>
+                </ul>
+                <p>Jag planerar dessutom att, om tid finns, kategorisera frågorna i FAQ-sektionen för att ytterligare förbättra användarvänligheten.</p>
             </section>
             <section id="references">
                 <h2>Källförteckning</h2>
