--- a/spa/spa.html
+++ b/spa/spa.html
@@ -77,27 +77,29 @@
 
         <section class="intro-spa">
             <div class="spa-intro">
-            <div class="spa-wrapper">
-                <h2>Avkoppling för kropp och sinne</h2>
-                <p>Välkommen till vår spaavdelning - en plats skapad för total återhämtning. Låt stillheten omfamna dig, känn de varma tonerna och doften av eteriska oljor som fyller rummen. Här möts nordisk enkelhet och modern spalyx.</p>
-                <br>
-                <h3>9 pooler • 6 bastur • Relaxavdelning</h3>
-                <p>Vandra mellan bastur, svala källor, lugna relaxytor och vyer som stillar tankarna. Oavsett om du söker ro, energi eller bara en stunds närvaro, hittar du här en plats där du får återknyta till dig själv.</p>
-            </div>
+                <div class="spa-wrapper">
+                    <h2>Avkoppling för kropp och sinne</h2>
+                    <p>Välkommen till vår spaavdelning - en plats skapad för total återhämtning. Låt stillheten omfamna dig, känn de varma tonerna och doften av eteriska oljor som fyller rummen. Här möts nordisk enkelhet och modern spalyx.</p>
+                    <br>
+                    <h3>9 pooler • 6 bastur • Relaxavdelning</h3>
+                    <p>Vandra mellan bastur, svala källor, lugna relaxytor och vyer som stillar tankarna. Oavsett om du söker ro, energi eller bara en stunds närvaro, hittar du här en plats där du får återknyta till dig själv.</p>
+                </div>
 
-            <div class="ritual-wrapper">
-                <h2>Den lugnande inledningen</h2>
-                <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro, återhämtning och ditt välbefinnande. Här får du en stund att landa, andas djupt och låta tankarna tystna innan du går vidare in i spaet.</p>
-                <br>
-                <h3>Tvagningsritual</h3>
-                <p>Skölj kroppen, tvätta och skölj igen, låt vattnets värme och rörelser mjuka upp musklerna och skapa en ren, uppfriskad känsla. Här ingår även kroppskrubb och fotbad med salt för den som önskar. Ritualen öppnar sinnena och ger en närvarande start på din tid i spaet.</p>
+                <div class="ritual-wrapper">
+                    <h2>Den lugnande inledningen</h2>
+                    <p>Din spaupplevelse inleds i ett stilla rum där fokus ligger på närvaro, återhämtning och ditt välbefinnande. Här får du en stund att landa, andas djupt och låta tankarna tystna innan du går vidare in i spaet.</p>
+                    <br>
+                    <h3>Tvagningsritual</h3>
+                    <p>Skölj kroppen, tvätta och skölj igen, låt vattnets värme och rörelser mjuka upp musklerna och skapa en ren, uppfriskad känsla. Här ingår även kroppskrubb och fotbad med salt för den som önskar. Ritualen öppnar sinnena och ger en närvarande start på din tid i spaet.</p>
+                </div>
             </div>
-        </div>
         </section>
 
-
-
-
+        <section class="cta">
+            <h2>Bra att veta</h2>
+            <p>Lån av handduk, badrock och tofflor ingår alltid.</p>
+            <a href="../book.html" class="btn">Boka ditt besök</a>
+        </section>
 
         <section class="highlights">
             <h2>Behandlingar & upplevelser</h2>
