spa cta updated

--- a/spa/spa.html
+++ b/spa/spa.html
@@ -97,8 +97,9 @@
 
         <section class="cta">
             <h2>Bra att veta</h2>
-            <p>Lån av handduk, badrock och tofflor ingår alltid.</p>
-            <a href="../book.html" class="btn">Boka ditt besök</a>
+            <p>När du besöker oss ingår alltid lån av handduk, badrock och tofflor.</p>
+            <p>Vid övriga frågor, läs vår <a href="../contact.html#faq">FAQ</a> eller skicka ett meddelande</p>
+            <a href="../contact.html" class="btn">Till Kontakt & FAQ</a>
         </section>
 
         <section class="highlights">
