Footer updated with parking info

--- a/contact.html
+++ b/contact.html
@@ -54,8 +54,12 @@
     <main>
         <section class="contact-form">
             <div class="contact">
-                <h2>Kontaktformulär</h2>
-                <p class="form-note">Om du inte hittar svaret på din fråga bland <strong>"<a href="#faq">Vanliga frågor</a>"</strong> nedanför, skicka ett meddelande.</p>
+                <h2>Kontakta oss</h2>
+                <p class="form-note">Om du inte hittar svaret på din fråga bland "<a href="#faq">Vanliga frågor</a>" nedanför, välkommen att kontakta oss.</p>
+                <ul>
+                    <li><strong>Telefon:</strong> 0647-123 34</li>
+                    <li><strong>E-post:</strong> info@nordiccalmspa.se</li>
+                </ul>
                 <form name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field">
                     <input type="hidden" name="form-name" value="contact">
                     <p hidden>
@@ -86,11 +90,12 @@
                         </button>
                     </div>
                 </form>
-                </div>
+            </div>
         </section>
         <section class="faq section" id="faq">
             <div class="faq-container">
                 <h2>Vanliga frågor</h2>
+                <h3>Behandlingar</h3>
                 <details>
                     <summary>Hur bokar jag en behandling?</summary>
                     <p>Du kan boka behandling direkt via vårt bokningsformulär under "<a href="book.html">Boka nu</a>". Fyll dina uppgifter och önskat datum, så återkommer vi med bekräftelse.</p>
@@ -102,13 +107,24 @@
                 </details>
 
                 <details>
-                    <summary>Finns det åldersgräns på spaet?</summary>
-                    <p>Vårt spa och relaxavdelning är avsedd för gäster över 16 år.</p>
+                    <summary>Kan jag avboka eller ändra min tid?</summary>
+                    <p>Ja, avbokning eller ändring kan göras senast 24 timmar före din bokade tid utan kostnad. Vid senare avbokning debiteras 50&nbsp;% av priset.</p>
                 </details>
 
                 <details>
-                    <summary>Kan jag avboka eller ändra min tid?</summary>
-                    <p>Ja, avbokning eller ändring kan göras senast 24 timmar före din bokade tid utan kostnad. Vid senare avbokning debiteras 50&nbsp;% av priset.</p>
+                    <summary>Vad händer om jag kommer för sent?</summary>
+                    <p>Om du blir sen kan din behandling behöva kortas ner för att nästa gäst ska få sin tid som planerat.</p>
+                </details>
+
+                <details>
+                    <summary>Erbjuder ni gravidmassage?</summary>
+                    <p>Ja, vi erbjuder anpassade behandlingar för gravida från vecka 13. Våra terapeuter har särskild utbildning för detta.</p>
+                </details>
+
+                <h3>Spa & Relax</h3>
+                <details>
+                    <summary>Kan jag komma bara för att spaa?</summary>
+                    <p>Absolut! Du kan boka enbart spaentré utan behandling. Perfekt för en lugn stund med bastu, bubbel och avslappning.</p>
                 </details>
 
                 <details>
@@ -117,13 +133,8 @@
                 </details>
 
                 <details>
-                    <summary>Erbjuder ni gravidmassage?</summary>
-                    <p>Ja, vi erbjuder anpassade behandlingar för gravida från vecka 13. Våra terapeuter har särskild utbildning för detta.</p>
-                </details>
-
-                <details>
-                    <summary>Kan jag komma bara för att spaa?</summary>
-                    <p>Absolut! Du kan boka enbart spaentré utan behandling. Perfekt för en lugn stund med bastu, bubbel och avslappning.</p>
+                    <summary>Finns det åldersgräns på spaet?</summary>
+                    <p>Vårt spa och relaxavdelning är avsedd för gäster över 16 år.</p>
                 </details>
 
                 <details>
@@ -131,6 +142,39 @@
                     <p>Vi rekommenderar att du tar med egna badkläder, men vi har även ett mindre utbud till försäljning vid receptionen.</p>
                 </details>
 
+                <h3>Hotellet</h3>
+                <details>
+                    <summary>När kan jag checka in?</summary>
+                    <p>Incheckning sker från klockan 15:00.</p>
+                </details>
+
+                <details>
+                    <summary>När måste jag checka ut?</summary>
+                    <p>Utcheckning sker senast klockan 11:00.</p>
+                </details>
+
+                <details>
+                    <summary>Kan jag få senare utcheckning?</summary>
+                    <p>Ja, i mån av plats erbjuder vi sen utcheckning mot en mindre avgift. Fråga i receptionen vid ankomst. Det finns även som tillval i <a href="hotel.html#book-hotel">bokningsformuläret.</a></p>
+                </details>
+
+                                                <details>
+                    <summary>Finns det handikappsanpassade rum?</summary>
+                    <p>Ja, vi har tillgänglighetsanpassade rum med bredare dörrar, dusch utan tröskel och extra utrymme för rullstol..</p>
+                </details>
+
+                                                <details>
+                    <summary>Ingår frukost i rumspriset?</summary>
+                    <p>Ja, en generös frukostbuffé infår alltid i priset för hotellgäster. Frukost till rummet går att få som tillval mot en extra avgift.</p>
+                </details>
+
+                                                <details>
+                    <summary>Kan jag ta med husdjur?</summary>
+                    <p>Ett fåtal av våra rum är husdjursvänliga – kontakta oss gärna i samband med bokning så ordnar vi det.</p>
+                </details>
+
+
+                <h3>Praktiskt information</h3>
                 <details>
                     <summary>Har ni presentkort?</summary>
                     <p>Ja, men i dagsläget går det endast att köpa presentkort på plats.</p>
@@ -141,18 +185,10 @@
                     <p>Vi tar emot kort, Swish och presentkort. Kontanter accepteras inte.</p>
                 </details>
 
-
-                <details>
-                    <summary>Vad händer om jag kommer för sent?</summary>
-                    <p>Om du blir sen kan din behandling behöva kortas ner för att nästa gäst ska få sin tid som planerat.</p>
-                </details>
-
-
                 <details>
                     <summary>Finns det parkering?</summary>
                     <p>Ja, vi har gratis parkering precis utanför. Det finns även 12 st laddstolpar för elbilar.</p>
                 </details>
-
 
                 <details>
                     <summary>Kan jag köpa era produkter?</summary>
@@ -176,6 +212,8 @@
                     <li><a href="book.html">Boka nu</a></li>
                     <li><a href="#contact" class="active">Kontakt & FAQ</a></li>
                 </ul>
+                <h3>Parkering</h3>
+                <p>                <i class="fa-solid fa-square-parking"></i> Fri parkering för våra gäster.</p>
             </div>
             <div class="footer-info">
                 <h3>Kontakta oss</h3>
@@ -192,7 +230,7 @@
                         <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
                     </a>
                 </div>
-                <p><strong>Öppettider</strong></p>
+                <h3>Öppettider</h3>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
