--- a/offers.html
+++ b/offers.html
@@ -427,6 +427,8 @@
                     <li><a href="book.html">Boka nu</a></li>
                     <li><a href="contact.html">Kontakt & FAQ</a></li>
                 </ul>
+            <h3>Parkering</h3>
+                <p>                <i class="fa-solid fa-square-parking"></i> Fri parkering för våra gäster.</p>
             </div>
             <div class="footer-info">
                 <h3>Kontakta oss</h3>
@@ -443,7 +445,7 @@
                         <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
                     </a>
                 </div>
-                <p><strong>Öppettider</strong></p>
+                <h3>Öppettider</h3>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
