--- a/rapport/rapport.html
+++ b/rapport/rapport.html
@@ -20,7 +20,7 @@
             font-family: 'Noto Sans', sans-serif;
             max-width: 80ch;
             margin: 2rem auto;
-            padding: 2rem;
+            padding: 1rem;
             line-height: 1.6;
         }
 
@@ -295,7 +295,6 @@
                     <li>Att det borde finnas tillval i bokningsformuläret, t.ex. fruktbricka eller vin.</li>
                     <li>Att hon saknade mer information om hotellrummen än det som syns på sidan “Hotel”.</li>
                 </ul>
-                <br>
                 <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
                 <ul class="check">
                     <li>Gjorde alla klickbara artiklar klickbara över hela ytan, inte bara via länken.</li>
@@ -324,14 +323,13 @@
                     <li>Inte tillräckligt tydlig information om handduk, badrock och tofflor.</li>
                     <li>Önskade mer lättillgänglig information om parkeringsmöjligheter.</li>
                 </ul>
-                <br>
                 <p><strong>Efter testet genomförde jag följande justeringar.</strong></p>
                 <ul class="check">
                     <li>Lade till restaurangens öppettider i footern, samt i restaurangens intro.</li>
                     <li>Formulerade om texten om tvagningsritualen för att bli mer informativ.</li>
-                    <li>Lade till informationen i "sidenote" även på "Spa & Relax"-sidan.</li>
+                    <li>Lade till informationen i "sidenote" om lån av handduk, badrock och tofflor även på "Spa & Relax"-sidan.</li>
+                    <li>Lade till information om parkering i footern.</li>
                 </ul>
-                <p>Jag planerar dessutom att, om tid finns, kategorisera frågorna i FAQ-sektionen för att ytterligare förbättra användarvänligheten.</p>
             </section>
             <section id="references">
                 <h2>Källförteckning</h2>
