--- a/spa/relax.html
+++ b/spa/relax.html
@@ -91,6 +91,8 @@
                     <li><a href="../book.html">Boka nu</a></li>
                     <li><a href="../contact.html">Kontakt & FAQ</a></li>
                 </ul>
+           <h3>Parkering</h3>
+                <p>                <i class="fa-solid fa-square-parking"></i> Fri parkering för våra gäster.</p>
             </div>
             <div class="footer-info">
                 <h3>Kontakta oss</h3>
@@ -98,16 +100,16 @@
                 <p>E-post: info@nordiccalmspa.se</p>
                 <p>Adress: Tallgläntan 3, 791 92 Falun</p>
                 <div class="socials">
-                <a href="https://www.facebook.com" target="_blank">
-                <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
-                <a href="https://www.instagram.com" target="_blank">
-                <i class="fa-brands fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="https://www.linkedin.com" target="_blank">
-                <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
-                </a>
-            </div>
-                <p><strong>Öppettider</strong></p>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <i class="fa-brands fa-facebook-f" aria-hidden="true"></i></a>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <i class="fa-brands fa-instagram" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.linkedin.com" target="_blank">
+                        <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <h3>Öppettider</h3>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
