--- a/spa/spa.html
+++ b/spa/spa.html
@@ -98,7 +98,7 @@
         <section class="cta">
             <h2>Bra att veta</h2>
             <p>När du besöker oss ingår alltid lån av handduk, badrock och tofflor.</p>
-            <p>Vid övriga frågor, läs vår <a href="../contact.html#faq">FAQ</a> eller skicka ett meddelande</p>
+            <p>Har du frågor? Läs vår <a href="../contact.html#faq">FAQ</a> eller kontakta oss direkt.</p>
             <a href="../contact.html" class="btn">Till Kontakt & FAQ</a>
         </section>
 
@@ -151,6 +151,8 @@
                     <li><a href="../book.html">Boka nu</a></li>
                     <li><a href="../contact.html">Kontakt & FAQ</a></li>
                 </ul>
+<h3>Parkering</h3>
+                <p>                <i class="fa-solid fa-square-parking"></i> Fri parkering för våra gäster.</p>
             </div>
             <div class="footer-info">
                 <h3>Kontakta oss</h3>
@@ -167,7 +169,7 @@
                         <i class="fa-brands fa-linkedin-in" aria-hidden="true"></i>
                     </a>
                 </div>
-                <p><strong>Öppettider</strong></p>
+                <h3>Öppettider</h3>
                 <p>Hotell/reception: 06:00–00:00</p>
                 <p>Restaurang & Bar: 06:00–00:00</p>
                 <p>Spa & Relax: 07:00–22:00</p>
